Fix right margin on mobile

--- a/_sass/custom/lessons.scss
+++ b/_sass/custom/lessons.scss
@@ -1,5 +1,5 @@
 mjx-container {
   overflow-x: auto;
   overflow-y: hidden;
-  max-width: 98%;
+  max-width: 100%;
 }
